(Wallet) Implement Bitcoin support and network selection (#22962)
* Enable Bitcoin by default on Android
* Introduce supported coin types for account selector
* Return Bitcoin logo for Bitcoin mainnet and testnet
* Remove unused methods and simplify CryptoModel implementation
* Implement Wallet creation method that includes selected networks
* Refactor network model and remove unused networks
* Perform refactoring to onboarding fragments and their model
* Include new network selection fragment
* Return keyring IDs for Bitcoin mainnet and testnet
* Add Neon logo
* Include Bitcoin among supported networks
* Simplify layout to avoid view pager glitches
* Remove plus button from network selector
* Implement new auto span grid layout manager
* Implement new adapter that shows available networks